--- a/Cloud Computing Final Project/indexStyle.css
+++ b/Cloud Computing Final Project/indexStyle.css
@@ -25,7 +25,7 @@
 
 body {
   background: #e6ecf2;
-  color: #ffffff; /* navy blue for base text #0a1f44 */
+  color: #0a1f44; /* navy blue for base text  */
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
